<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Homework1="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_pet"
        android:icon="@drawable/paw"
        android:showAsAction="always"
        android:title="@string/action_pet">
    </item>
    <item
        android:id="@+id/action_weather"
        android:icon="@drawable/wth"
        android:showAsAction="always"
        android:title="@string/action_weather">
    </item>
    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/action_overflow">
        <menu>
            <item
                android:id="@+id/action_change_password"
                android:title="@string/action_change_password">
            </item>
            <item
                android:id="@+id/action_links"
                android:title="@string/action_links">
            </item>
            <item
                android:id="@+id/action_logout"
                android:title="@string/action_logout">
            </item>
        </menu>
    </item>

</menu>