<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_holo_light"
        android:gravity="top" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvbreed"
            android:orientation="vertical"
            android:scrollbars="vertical" >

            <RadioButton
                android:id="@+id/radio_pug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pug"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radio_rottweiler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rottweiler"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/labr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labr"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/boxer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boxer"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/bichon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bichon"
                android:textSize="15sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvbreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="14dp"
            android:text="@string/q1"
            android:textColor="@color/hblue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvbreed"
            android:layout_below="@+id/radioGroup1"
            android:layout_marginTop="5dp"
            android:text="@string/q2"
            android:textColor="@color/hblue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvname"
            android:layout_alignRight="@+id/tvname"
            android:layout_below="@+id/tvname"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etname"
            android:layout_below="@+id/etname"
            android:layout_marginTop="5dp"
            android:text="@string/q3"
            android:textColor="@color/hblue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvage"
            android:layout_alignRight="@+id/etname"
            android:layout_below="@+id/tvage"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvsex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etage"
            android:layout_below="@+id/etage"
            android:layout_marginTop="5dp"
            android:text="@string/q4"
            android:textColor="@color/hblue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/RadioGroup02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvsex"
            android:layout_below="@+id/tvsex"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="15sp" />
        </RadioGroup>

        <Button
            android:id="@+id/bdone"
            style="@drawable/apptheme_btn_default_holo_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/RadioGroup02"
            android:layout_below="@+id/RadioGroup02"
            android:layout_marginTop="14dp"
            android:text="@string/done" />
    </RelativeLayout>

</ScrollView>