<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_holo_light"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.homework1.HomepageActivity" >

    <TextView
        android:id="@+id/selectphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewImage"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/selectphoto"
        android:textColor="@color/hblue"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/saveprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailview"
        android:layout_below="@+id/emailview"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        android:minWidth="60dp"
        android:text="@string/saveprofile"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/emailview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/emailview" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/Welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/viewImage"
        android:layout_width="157dp"
        android:layout_height="156dp"
        android:layout_below="@+id/txt_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/tap_email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#b2b2b2"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/selectphoto"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/hblue" />

</RelativeLayout>