<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/apptheme_item_background_holo_light"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.homework1.ChangePasswordActivity" >

    <Button
        android:id="@+id/button1"
        style="@drawable/apptheme_btn_default_holo_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/old_password"
        android:layout_below="@+id/old_password"
        android:layout_marginTop="98dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button2"
        style="@drawable/apptheme_btn_default_holo_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/old_password"
        android:text="@string/ok" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:typeface="normal" />
    
 
    <EditText
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:typeface="normal" />

</RelativeLayout>
